--- a/ADMFacturar/Views/Administracion/ListProvedores.cshtml
+++ b/ADMFacturar/Views/Administracion/ListProvedores.cshtml
@@ -6,134 +6,130 @@
 <!--                  Formulario                        -->
 
 <form>
-    <div class="border-b border-gray-900/10 pb-12">
-        <h2 class="text-base font-semibold leading-7 text-white">Filtro de Proveedores</h2>
-        <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+	<div class="border-b border-gray-900/10 pb-12">
+		<h2 class="text-base font-semibold leading-7 text-white">Filtro de Proveedores</h2>
+		<div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 
-            <div class="sm:col-span-1 ">
-                <label for="city" class="block text-sm font-medium leading-6 text-white">Nombre de Proveedor</label>
-                <div class="mt-2">
-                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                </div>
-            </div>
-            <div class="sm:col-span-1 ">
-                <label for="city" class="block text-sm font-medium leading-6 text-white">Correo de Proveedor</label>
-                <div class="mt-2">
-                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                </div>
-            </div>
-            <div class="sm:col-span-1 ">
-                <label for="city" class="block text-sm font-medium leading-6 text-white">Estado de Proveedor</label>
-                <div class="mt-2">
-                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                </div>
-            </div>
-        </div>
-    </div>
+			<div class="sm:col-span-1 ">
+				<label for="city" class="block text-sm font-medium leading-6 text-white">Codigo de Proveedor</label>
+				<div class="mt-2">
+					<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+				</div>
+			</div>
+			<div class="sm:col-span-1 ">
+				<label for="city" class="block text-sm font-medium leading-6 text-white">Nombre de Proveedor</label>
+				<div class="mt-2">
+					<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+				</div>
+			</div>
+		</div>
+	</div>
 </form>
+<!--Final de From-->
+
 
 <div class="w-full">
-    <div class="flex justify-between items-center px-6 py-4 border-b">
-        <p class="text-xl pb-3 flex items-center text-white">
-            <i class="fas fa-list mr-3"></i> Listado de Provedores
-        </p>
-        <div>
-            <button class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white" onclick="abrirModal('modalCrearProvedores')">Crear Nuevo Provedor </button>
-        </div>
-    </div>
+	<div class="flex justify-between items-center px-6 py-4 border-b">
+		<p class="text-xl pb-3 flex items-center text-white">
+			<i class="fas fa-list mr-3"></i> Listado de Proveedores
+		</p>
+		<div>
+			<button class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white" onclick="abrirModal('modalCrearProveedores')">Crear Nuevo Proveedor </button>
+		</div>
+	</div>
 
 
-    <!--                  Tabla                        -->
-    <div class="bg-white overflow-auto">
-        <table class="min-w-full bg-white border border-gray-300">
-            <thead class="bg-gray-900 text-white">
-                <tr>
-                    <th class="text-center py-3">Codigo de Proveedor</th>
-                    <th class="text-center py-3">Nombre de Proveedor</th>
-                    <th class="text-center py-3">Telefono de Proveedor</th>
-                    <th class="text-center py-3">Correo de Proveedor</th>
-                    <th class="text-center py-3">Estado</th>
-                    <th class="text-center py-3">Acciones</th>
+	<!--                  Tabla                        -->
+	<div class="bg-white overflow-auto">
+		<table class="min-w-full bg-white border border-gray-300">
+			<thead class="bg-gray-900 text-white">
+				<tr>
+					<th class="text-center py-3">Codigo de Proveedor</th>
+					<th class="text-center py-3">Nombre de Proveedor</th>
+					<th class="text-center py-3">Telefono de Proveedor</th>
+					<th class="text-center py-3">Correo de Proveedor</th>
+					<th class="text-center py-3">Estado</th>
+					<th class="text-center py-3">Acciones</th>
 
-                </tr>
-            </thead>
-            <tbody class="text-center">
-                <tr class="even:bg-gray-50 dark:even:bg-gray-900/50 lg:justify-center">
-                    <td class="p-3 border border-gray-300">15</td>
-                    <td class="p-3 border border-gray-300">Volcom</td>
-                    <td class="p-3 border border-gray-300">2293 9898</td>
-                    <td class="p-3 border border-gray-300">Volcom123@volcom.com</td>
-                    <td class="p-3 border border-gray-300">Activo</td>
-                    <td class="p-3 border border-gray-300">
+				</tr>
+			</thead>
+			<tbody class="text-center">
+				<tr class="even:bg-gray-50 dark:even:bg-gray-900/50 lg:justify-center">
+					<td class="p-3 border border-gray-300">15</td>
+					<td class="p-3 border border-gray-300">Volcom</td>
+					<td class="p-3 border border-gray-300">2293 9898</td>
+					<td class="p-3 border border-gray-300">Volcom123@volcom.com</td>
+					<td class="p-3 border border-gray-300">Activo</td>
+					<td class="p-3 border border-gray-300">
 
-                        <button class="btn btnEditar" title="Editar Template" onclick="abrirModal('modalCrearProvedores')">
-                            <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d=" M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z" /></svg>
-                        </button>
-                        <botton class="btn btnEliminar" title="Eliminar Abono">
-                            <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="trash" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                                <path fill="currentColor" d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
-                            </svg>
-                        </botton>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+						<button class="btn btnEditar" title="Editar Template" onclick="abrirModal('modalCrearProveedores')">
+							<svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d=" M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z" /></svg>
+						</button>
+						<botton class="btn btnEliminar" title="Eliminar Abono">
+							<svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="trash" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+								<path fill="currentColor" d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
+							</svg>
+						</botton>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </div>
-
+<!--                  Final Tabla                        -->
 <!--                  Modal de Crear Template                        -->
-<div id="modalCrearProvedores" class="modal">
-    <div class="modal-content">
-        <form>
-            <div class="border-b border-gray-900/10 pb-12">
-                <h2 class="text-base font-semibold leading-7 text-white">Creacion de nuevo Proveedor</h2>
-                <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+<div id="modalCrearProveedores" class="modal">
+	<div class="modal-content">
+		<form>
+			<div class="border-b border-gray-900/10 pb-12">
+				<h2 class="text-base font-semibold leading-7 text-white">Creacion de nuevo Proveedor</h2>
+				<div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 
-                    <div class="sm:col-span-2">
-                        <label for="region" class="block text-sm font-medium leading-6 text-white">Codigo Provedor</label>
-                        <div class="mt-2">
-                            <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                        </div>
-                    </div>
-                    <div class="sm:col-span-2">
-                        <label for="region" class="block text-sm font-medium leading-6 text-white">Nombre Provedor</label>
-                        <div class="mt-2">
-                            <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                        </div>
-                    </div>
-                    <div class="sm:col-span-2">
-                        <label for="region" class="block text-sm font-medium leading-6 text-white">Telefono Provedor</label>
-                        <div class="mt-2">
-                            <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                        </div>
-                    </div>
+					<div class="sm:col-span-2">
+						<label for="region" class="block text-sm font-medium leading-6 text-white">Codigo Proveedor</label>
+						<div class="mt-2">
+							<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="region" class="block text-sm font-medium leading-6 text-white">Nombre Proveedor</label>
+						<div class="mt-2">
+							<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="region" class="block text-sm font-medium leading-6 text-white">Telefono Proveedor</label>
+						<div class="mt-2">
+							<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						</div>
+					</div>
 
-                    <div class="sm:col-span-2 sm:col-start-1">
-                        <label for="email" class="block text-sm font-medium leading-6 text-white">Correo Provedor</label>
-                        <div class="mt-2">
-                            <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                        </div>
-                    </div>
-                    <fieldset>
-                        <legend class="block text-sm font-medium leading-6 text-white">Estado</legend>
-                        <div class="mt-3 flex items-center gap-x-2">
-                            <div class="flex items-center gap-x-2 bg-blue-100 text-blue-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-blue-400 ">
-                                <input id="push-everything" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
-                                <label for="push-everything" class="block text-sm font-medium leading-6 text-gray-900">Activo</label>
-                            </div>
-                            <div class="flex items-center gap-x-2 bg-red-100 text-red-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-red-400">
-                                <input id="push-email" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
-                                <label for="push-email" class="block text-sm font-medium leading-6 text-gray-900">Inactivo</label>
-                            </div>
-                        </div>
-                        </fieldset>
-                </div>
-                <br />
-                <br />
-                <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
-                <button class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
-            </div>
-        </form>
-    </div>
+					<div class="sm:col-span-2 sm:col-start-1">
+						<label for="email" class="block text-sm font-medium leading-6 text-white">Correo Proveedor</label>
+						<div class="mt-2">
+							<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						</div>
+					</div>
+					<fieldset>
+						<legend class="block text-sm font-medium leading-6 text-white">Estado</legend>
+						<div class="mt-3 flex items-center gap-x-2">
+							<div class="flex items-center gap-x-2 bg-blue-100 text-blue-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-blue-400 ">
+								<input id="push-everything" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+								<label for="push-everything" class="block text-sm font-medium leading-6 text-gray-900">Activo</label>
+							</div>
+							<div class="flex items-center gap-x-2 bg-red-100 text-red-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-red-400">
+								<input id="push-email" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+								<label for="push-email" class="block text-sm font-medium leading-6 text-gray-900">Inactivo</label>
+							</div>
+						</div>
+					</fieldset>
+				</div>
+				<br />
+				<br />
+				<button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+				<button class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
+			</div>
+		</form>
+	</div>
 </div>
 <!--                  Final Modal de Crear Tempalte                        -->
