Interacción con interfaz de Clientes Solamente Listado

--- a/ADMFacturar/Views/Administracion/ListClientes.cshtml
+++ b/ADMFacturar/Views/Administracion/ListClientes.cshtml
@@ -1,4 +1,4 @@
-﻿@using ADM.Cliente.Models
+﻿@using ADM.Models
 @model IEnumerable<ClienteViewModel>
 <link href="~/css/custom.css" rel="stylesheet" />
 
