Cambiso con create Clientes

--- a/ADMFacturar/Views/Administracion/Index.cshtml
+++ b/ADMFacturar/Views/Administracion/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="container mx-auto py-8 ">
         <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-2 gap-4">
 
-            <a asp-action="ListClientes">
+            <a asp-action="Index" asp-controller="Clientes">
                 <div class="bg-white rounded-lg shadow-md p-6 text-center">
                     <i class="fa-solid fa-user-tag text-5xl text-blue-500 mb-4"></i>
                     <h3 class="text-lg font-semibold">Clientes</h3>
