Vistas Create de administración
Vistas Create de administración

--- a/ADMFacturar/Views/Administracion/Index.cshtml
+++ b/ADMFacturar/Views/Administracion/Index.cshtml
@@ -17,7 +17,7 @@
                 </div>
             </a>
 
-            <a asp-action="ListArticulos">
+            <a asp-action="Index" asp-controller="Articulos">
                 <div class="bg-white rounded-lg shadow-md p-6 text-center">
                     <i class="fa-solid fa-grip-vertical text-5xl text-blue-500 mb-4"></i>
                     <h3 class="text-lg font-semibold">Artículos</h3>
@@ -25,7 +25,7 @@
                 </div>
             </a>
 
-            <a asp-action="ListProvedores">
+            <a asp-action="Index" asp-controller="Proveedores">
                 <div class="bg-white rounded-lg shadow-md p-6 text-center">
                     <i class="fa-solid fa-address-book text-5xl text-blue-500 mb-4"></i>
                     <h3 class="text-lg font-semibold">Proveedores</h3>
@@ -33,7 +33,7 @@
                 </div>
             </a>
 
-            <a asp-action="ListVendedores">
+            <a asp-action="Index" asp-controller="Vendedores">
                 <div class="bg-white rounded-lg shadow-md p-6 text-center">
                     <i class="fa-solid fa-user-tie text-5xl text-blue-500 mb-4"></i>
                     <h3 class="text-lg font-semibold">Vendedores</h3>
@@ -41,7 +41,7 @@
                 </div>
             </a>
 
-            <a asp-action="ListTransportes">
+            <a asp-action="Index" asp-controller="Transportes">
                 <div class="bg-white rounded-lg shadow-md p-6 text-center">
                     <i class="fa-solid fa-truck-fast text-5xl text-blue-500 mb-4"></i>
                     <h3 class="text-lg font-semibold">Transportes</h3>
