--- a/ADMFacturar/Views/Transportes/Index.cshtml
+++ b/ADMFacturar/Views/Transportes/Index.cshtml
@@ -27,7 +27,7 @@
             <i class="fas fa-list mr-3"></i> Listado de Transportes
         </p>
         <div>
-            <button class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white" onclick="abrirModal('modalCrearTransporte')">Crear Nuevo Transporte </button>
+            <a asp-action="CrearTransporte" class="btn max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">Crear Nuevo Transporte </a>
         </div>
     </div>
 
@@ -57,7 +57,14 @@
                                 @Html.DisplayFor(modelItem => item.Descripcion)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Estado)
+                                @if (item.Estado.Equals("1"))
+                                {
+                                    <span>Activo</span>
+                                }
+                                else
+                                {
+                                    <span>Inactivo</span>
+                                }
                             </td>
                             @* <td class="p-3 border border-gray-300"> *@
                             <td>
@@ -84,42 +91,4 @@
     </div>
 </div>
 
-<!--                  Modal de Crear Template                        -->
-<div id="modalCrearTransporte" class="modal">
-    <div class="modal-content">
-        <form>
-            <div class="border-b border-gray-900/10 pb-12">
-                <h2 class="text-base font-semibold leading-7 text-white">Creacion de nuevo Transporte</h2>
-                <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 
-                    <div class="sm:col-span-2">
-                        <label for="region" class="block text-sm font-medium leading-6 text-white">Codigo Transporte</label>
-                        <div class="mt-2">
-                            <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                        </div>
-                    </div>
-                    <div class="sm:col-span-2">
-                        <label for="provider" class="block text-sm font-medium leading-6 text-white">Tipo de Transporte</label>
-                        <div class="mt-2">
-                            <select id="provider" name="provider" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
-                                <option value="">Transporte</option>
-                                <option value="">Personal</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="sm:col-span-2">
-                        <label for="region" class="block text-sm font-medium leading-6 text-white">Descripcion Transporte</label>
-                        <div class="mt-2">
-                            <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                        </div>
-                    </div>
-                </div>
-                <br />
-                <br />
-                <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
-                <button class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
-            </div>
-        </form>
-    </div>
-</div>
-<!--                  Final Modal de Crear Tempalte                        -->
