--- a/ADMFacturar/Views/Clientes/CrearCliente.cshtml
+++ b/ADMFacturar/Views/Clientes/CrearCliente.cshtml
@@ -123,9 +123,10 @@
 		</div>
 		<br />
 		<br />
-		<input asp-for="FK_Usuario_Creacion" value="1" hidden/>
-		<input asp-for="FK_Usuario_Modificacion" value="1" hidden/>
+		<input asp-for="FK_Usuario_Creacion" value="user1" hidden/>
+		<input asp-for="FK_Usuario_Modificacion" value="user1" hidden/>
+		<input asp-for="Fecha_Modificacion" value="" hidden/>
 		<button type="submit" asp-action="CrearCliente" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
-		<button class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
+		<button asp-action="Index" class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
 	</div>
 </form>
