CRUD en Interfaz para Proveedor

--- a/ADMFacturar/Views/Clientes/ActualizarCliente.cshtml
+++ b/ADMFacturar/Views/Clientes/ActualizarCliente.cshtml
@@ -4,7 +4,7 @@
 
 <form asp-action="ActualizarCliente" method="post">
 	<div class="border-b border-gray-900/10 pb-12">
-		<h2 class="text-base font-semibold leading-7 text-white">Creación de nuevo cliente</h2>
+		<h2 class="text-base font-semibold leading-7 text-white">Modificar cliente</h2>
 		<div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 			<div class="sm:col-span-2">
 				<label for="TipoIdentificacion" class="block text-sm font-medium leading-6 text-white">Tipo de Identificación</label>
