--- a/ADMFacturar/Views/Articulos/CrearArticulo.cshtml
+++ b/ADMFacturar/Views/Articulos/CrearArticulo.cshtml
@@ -33,6 +33,7 @@
 						<option value="3">Proveedor 3</option>
 						<option value="4">Proveedor 4</option>
 						<option value="5">Proveedor 5</option>
+						<option value="6">Proveedor 6</option>
 					</select>
 				</div>
 			</div>
