--- a/ADMFacturar/Views/Clientes/Index.cshtml
+++ b/ADMFacturar/Views/Clientes/Index.cshtml
@@ -19,7 +19,6 @@
 	</div>
 </form>
 <!-- Fin del Formulario -->
-
 <div class="w-full mt-8">
 	<div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
 		<h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Clientes</h3>
@@ -78,9 +77,9 @@
 									<a asp-action="ActualizarCliente" asp-route-PK="@item.PK_Cliente" class="text-blue-600 hover:text-blue-900" title="Editar">
 										<i class="fas fa-edit"></i>
 									</a>
-									<form method="post" asp-action="DesactivarCliente" asp-route-PK="@item.PK_Cliente" onsubmit="return confirm('¿Está seguro que desea desactivar este cliente?');">
+									<form method="post" asp-action="DesactivarCliente" asp-route-PK="@item.PK_Cliente" onsubmit="return mostrarConfirmacion(event)">
 										<button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Desactivar">
-											<i class="fas fa-trash"></i>
+											<i class="fa-solid fa-ban"></i>
 										</button>
 									</form>
 								</div>
@@ -99,3 +98,36 @@
 	</div>
 </div>
 
+<!-- Modal de confirmación -->
+<div id="confirmacionModal" class="fixed inset-0 z-10 overflow-y-auto hidden">
+	<div class="flex items-center justify-center min-h-screen">
+		<div class="bg-white rounded-lg p-6 shadow-xl">
+			<div class="mb-4 text-center">
+				<p class="text-lg font-semibold">¿Seguro que deseas desactivar este cliente?</p>
+			</div>
+			<div class="text-center">
+				<button onclick="confirmarDesactivacion()" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded mr-2">Confirmar</button>
+				<button onclick="cancelarDesactivacion()" class="border border-gray-300 hover:bg-gray-200 font-semibold py-2 px-4 rounded">Cancelar</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+<script>
+
+	function mostrarConfirmacion(event) {
+		event.preventDefault(); 
+		document.getElementById('confirmacionModal').classList.remove('hidden');
+		window.confirmarDesactivacion = function () {
+			event.target.closest('form').submit(); 
+		};
+		window.cancelarDesactivacion = function () {
+			document.getElementById('confirmacionModal').classList.add('hidden');
+		};
+
+		return false; 
+	}
+
+</script>
