--- a/ADMFacturar/Views/Proveedores/ActualizarProveedor.cshtml
+++ b/ADMFacturar/Views/Proveedores/ActualizarProveedor.cshtml
@@ -1,57 +1,76 @@
 ﻿@model Proveedor
 
-            <form asp-action="ActualizarProveedor" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md">
-                <div class="border-b border-gray-700 pb-6">
-                    <h2 class="text-lg font-semibold leading-7 text-white">Actualizar Proveedor</h2>
-                </div>
-                <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+<form asp-action="ActualizarProveedor" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formupdate">
+	<div class="border-b border-gray-700 pb-6">
+		<h2 class="text-lg font-semibold leading-7 text-white">Actualizar Proveedor</h2>
+	</div>
+	<div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 
-                    @* <div class="sm:col-span-2 ">
-                    <label for="PK_Cliente" class="block text-sm font-medium leading-6 text-white">Código Proveedor</label>
-                    <div class="mt-2">
-                    <input asp-for="PK_Proveedor" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                    </div>
-                    </div> *@
+		@* <div class="sm:col-span-2 ">
+		<label for="PK_Cliente" class="block text-sm font-medium leading-6 text-white">Código Proveedor</label>
+		<div class="mt-2">
+		<input asp-for="PK_Proveedor" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+		</div>
+		</div> *@
 
-                    <div class="sm:col-span-2">
-                        <label for="Nombre" class="block text-sm font-medium text-gray-300">Nombre</label>
-                        <div class="mt-2">
-                            <input asp-for="Nombre" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-                        </div>
-                    </div>
-                    <div class="sm:col-span-2">
-                        <label for="Telefono" class="block text-sm font-medium text-gray-300">Teléfono</label>
-                        <div class="mt-2">
-                            <input asp-for="Telefono" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-                        </div>
-                    </div>
-                    <div class="sm:col-span-2">
-                        <label for="Correo" class="block text-sm font-medium text-gray-300">Correo</label>
-                        <div class="mt-2">
-                            <input asp-for="Correo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-                        </div>
-                    </div>
-                    <div class="sm:col-span-2">
-                        <label for="Direccion" class="block text-sm font-medium text-gray-300">Dirección</label>
-                        <div class="mt-2">
-                            <input asp-for="Direccion" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-                        </div>
-                    </div>
-                    <div class="sm:col-span-2">
-                        <label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
-                        <div class="mt-2">
-                            <select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-                                <option value="true">Activo</option>
-                                <option value="false">Inactivo</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <div class="mt-6 flex justify-end gap-x-4">
-                    <input asp-for="PK_Proveedor" value="@Model.PK_Proveedor" type="hidden" />
-                    <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
-                    <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
-                    <button type="submit" asp-action="ActualizarProveedor" class="rounded-md bg-indigo-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus:ring-2 focus:ring-indigo-500">Guardar</button>
-                    <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
-                </div>
-            </form>
+		<div class="sm:col-span-2">
+			<label for="Nombre" class="block text-sm font-medium text-gray-300">Nombre</label>
+			<div class="mt-2">
+				<input asp-for="Nombre" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+			</div>
+		</div>
+		<div class="sm:col-span-2">
+			<label for="Telefono" class="block text-sm font-medium text-gray-300">Teléfono</label>
+			<div class="mt-2">
+				<input asp-for="Telefono" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+			</div>
+		</div>
+		<div class="sm:col-span-2">
+			<label for="Correo" class="block text-sm font-medium text-gray-300">Correo</label>
+			<div class="mt-2">
+				<input asp-for="Correo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+			</div>
+		</div>
+		<div class="sm:col-span-2">
+			<label for="Direccion" class="block text-sm font-medium text-gray-300">Dirección</label>
+			<div class="mt-2">
+				<input asp-for="Direccion" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+			</div>
+		</div>
+		<div class="sm:col-span-2">
+			<label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
+			<div class="mt-2">
+				<select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+					<option value="true">Activo</option>
+					<option value="false">Inactivo</option>
+				</select>
+			</div>
+		</div>
+	</div>
+	<div class="mt-6 flex justify-end gap-x-4">
+		<input asp-for="PK_Proveedor" value="@Model.PK_Proveedor" type="hidden" />
+		<input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
+		<input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
+		<button type="submit" onclick="mostrarAlertaYRedireccion(event)" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+		<button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
+	</div>
+</form>
+
+<div id="alerta-exito" class="hidden fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-green-500 text-white px-4 py-2 rounded-md mb-4">
+	¡ Proveedor actualizado exitosamente !
+</div>
+
+<script>
+	//Alerta de ingreso de registro a la BD...
+	function mostrarAlertaYRedireccion(event) {
+		event.preventDefault();
+		document.getElementById('alerta-exito').classList.remove('hidden');
+		setTimeout(function () {
+
+			window.location.href = '@Url.Action("Index", "Proveedores")';
+		}, 3000);
+		setTimeout(function () {
+			document.getElementById('formupdate').submit();
+		}, 3000);
+	}
+</script>
