--- a/ADMFacturar/Views/Transportes/ActualizarTransporte.cshtml
+++ b/ADMFacturar/Views/Transportes/ActualizarTransporte.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Transporte
-<form asp-action="ActualizarTransporte" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md">
+
+<form asp-action="ActualizarTransporte" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formupdate">
     <div class="border-b border-gray-700 pb-6">
         <h2 class="text-lg font-semibold leading-7 text-white">Actualizar Transporte</h2>
     </div>
@@ -24,8 +25,26 @@
         <input asp-for="PK_Medio_Transporte" value="@Model.PK_Medio_Transporte" type="hidden" />
         <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
         <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
-        <button type="submit" asp-action="ActualizarTransporte" class="rounded-md bg-indigo-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus:ring-2 focus:ring-indigo-500">Guardar</button>
+        <button type="submit" onclick="mostrarAlertaYRedireccion(event)" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
         <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
     </div>
 </form>
 
+<div id="alerta-exito" class="hidden fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-green-500 text-white px-4 py-2 rounded-md mb-4">
+	¡ Trasnporte actualizado exitosamente !
+</div>
+
+<script>
+	//Alerta de ingreso de registro a la BD...
+	function mostrarAlertaYRedireccion(event) {
+		event.preventDefault();
+		document.getElementById('alerta-exito').classList.remove('hidden');
+		setTimeout(function () {
+
+			window.location.href = '@Url.Action("Index", "Transportes")';
+		}, 3000);
+        setTimeout(function () {
+            document.getElementById('formupdate').submit();
+        }, 3000);
+    }
+</script>
