--- a/ADMFacturar/Views/Transportes/Index.cshtml
+++ b/ADMFacturar/Views/Transportes/Index.cshtml
@@ -66,18 +66,14 @@
                                         <a asp-action="ActualizarTransporte" asp-route-PK="@item.PK_Medio_Transporte" class="text-blue-600 hover:text-blue-900" title="Editar">
                                             <i class="fas fa-edit"></i>
                                         </a>
-                                        <form method="post" asp-action="DesactivarTransporte" asp-route-PK="@item.PK_Medio_Transporte" onsubmit="return confirm('¿Está seguro que desea desactivar este cliente?');">
+                                        <form method="post" asp-action="DesactivarTransporte" asp-route-PK="@item.PK_Medio_Transporte" onsubmit="return mostrarConfirmacion(event)">
                                             <button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Desactivar">
-                                                <i class="fas fa-trash"></i>
+                                                <i class="fa-solid fa-ban"></i>
                                             </button>
                                         </form>
                                     </div>
                                 </div>
-                                @* <button asp-action="DesactivarCliente" asp-route-PK="@item.PK_Cliente" class="btn btnEliminar" title="Desactivar">
-                        <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="trash" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                        <path fill="currentColor" d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
-                        </svg>
-                        </button> *@
+                                
                             </td>
                         </tr>
                     }
@@ -93,4 +89,34 @@
     </div>
 </div>
 
+<!-- Modal de confirmación -->
+<div id="confirmacionModal" class="fixed inset-0 z-10 overflow-y-auto hidden">
+    <div class="flex items-center justify-center min-h-screen">
+        <div class="bg-white rounded-lg p-6 shadow-xl">
+            <div class="mb-4 text-center">
+                <p class="text-lg font-semibold">¿Seguro que deseas desactivar este Transporte?</p>
+            </div>
+            <div class="text-center">
+                <button onclick="confirmarDesactivacion()" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded mr-2">Confirmar</button>
+                <button onclick="cancelarDesactivacion()" class="border border-gray-300 hover:bg-gray-200 font-semibold py-2 px-4 rounded">Cancelar</button>
+            </div>
+        </div>
+    </div>
+</div>
 
+<script>
+
+    function mostrarConfirmacion(event) {
+        event.preventDefault();
+        document.getElementById('confirmacionModal').classList.remove('hidden');
+        window.confirmarDesactivacion = function () {
+            event.target.closest('form').submit();
+        };
+        window.cancelarDesactivacion = function () {
+            document.getElementById('confirmacionModal').classList.add('hidden');
+        };
+
+        return false;
+    }
+
+</script>
